--- a/intelligent intersection/cfg/twoWay6lanes.sumo.cfg
+++ b/intelligent intersection/cfg/twoWay6lanes.sumo.cfg
@@ -8,12 +8,17 @@
     </input>
 
     <time>
-        <step-length value="0.01"/>
+        <step-length value="0.5"/>
     </time>
 
     <gui_only>
         <start value="true"/>
         <gui-settings-file value="twoWay6lanes.gui.xml"/>
     </gui_only>
+
+    <output>
+  		  <tripinfo-output value = "tripinfo1.xml" />
+        <queue-output value = "queues.xml" />
+  	</output>
 
 </configuration>
